--- a/Project/templates/base.html
+++ b/Project/templates/base.html
@@ -10,12 +10,12 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="navbar-nav" >
                 <a class="nav-item nav-link" href="{{ url_for('index') }}">Home</a>
+                <!-- <a class="nav-item nav-link" href="{{ url_for('index') }}">Voeg Film toe</a>
                 <a class="nav-item nav-link" href="{{ url_for('index') }}">Home</a>
                 <a class="nav-item nav-link" href="{{ url_for('index') }}">Home</a>
                 <a class="nav-item nav-link" href="{{ url_for('index') }}">Home</a>
                 <a class="nav-item nav-link" href="{{ url_for('index') }}">Home</a>
-                <a class="nav-item nav-link" href="{{ url_for('index') }}">Home</a>
-                <a class="nav-item nav-link" href="{{ url_for('index') }}">Home</a>
+                <a class="nav-item nav-link" href="{{ url_for('index') }}">Home</a> -->
             </div>
         </nav>
         {% block content %}
