--- a/Project/templates/addfilm.html
+++ b/Project/templates/addfilm.html
@@ -5,7 +5,9 @@
   <p>Vul onderstaand formulier in om een film toe te voegen aan de database:</p>
   <form method="POST">
       {{ form.hidden_tag() }}
-      {{ form.name.label }} {{ form.name() }}
+      {{ form.titel.label }} {{ form.titel() }} <br>
+      {{ form.jaartal.label }} {{ form.jaartal() }} <br>
+      {{ form.regisseur.label }} {{ form.regisseur() }} <br>
       {{ form.submit() }}
   </form>
 </div>
