--- a/Project/templates/base.html
+++ b/Project/templates/base.html
@@ -11,7 +11,7 @@
             <div class="navbar-nav" >
                 <a class="nav-item nav-link" href="{{ url_for('index') }}">Home</a>
                 <a class="nav-item nav-link" href="{{ url_for('add_film') }}">Voeg Film toe</a>
-                <a class="nav-item nav-link" href="{{ url_for('index') }}">test</a>
+                <a class="nav-item nav-link" href="{{ url_for('list_films') }}">Filmlijst</a>
                 <a class="nav-item nav-link" href="{{ url_for('index') }}">Home</a>
                 <a class="nav-item nav-link" href="{{ url_for('index') }}">Home</a>
                 <a class="nav-item nav-link" href="{{ url_for('index') }}">Home</a>
