--- a/Project/templates/base.html
+++ b/Project/templates/base.html
@@ -23,7 +23,7 @@
                       <li><a class="dropdown-item" href="{{ url_for('add_film') }}">Voeg film toe</a></li>
                       <li><a class="dropdown-item" href="{{ url_for('list_films') }}">Filmlijst</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="{{ url_for('index') }}">Verwijder een Film</a></li>
+                      <li><a class="dropdown-item" href="{{ url_for('del_film') }}">Verwijder een Film</a></li>
                     </ul>
                   </li>
                   <li class="nav-item dropdown">
@@ -31,8 +31,8 @@
                       Regiseurs
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="{{ url_for('index') }}">Voeg regisseur toe</a></li>
-                      <li><a class="dropdown-item" href="{{ url_for('index') }}">Lijst van regisseurs</a></li>
+                      <li><a class="dropdown-item" href="{{ url_for('add_regisseur') }}">Voeg regisseur toe</a></li>
+                      <li><a class="dropdown-item" href="{{ url_for('list_regisseurs') }}">Lijst van regisseurs</a></li>
                       <li><hr class="dropdown-divider"></li>
                       <li><a class="dropdown-item" href="{{ url_for('index') }}">Verwijder een regisseur</a></li>
                     </ul>
