--- a/Project/templates/base.html
+++ b/Project/templates/base.html
@@ -34,7 +34,7 @@
                       <li><a class="dropdown-item" href="{{ url_for('add_regisseur') }}">Voeg regisseur toe</a></li>
                       <li><a class="dropdown-item" href="{{ url_for('list_regisseurs') }}">Lijst van regisseurs</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="{{ url_for('index') }}">Verwijder een regisseur</a></li>
+                      <li><a class="dropdown-item" href="{{ url_for('del_regisseur') }}">Verwijder een regisseur</a></li>
                     </ul>
                   </li>
                   <li class="nav-item dropdown">
