--- a/Project/templates/welcome_user.html
+++ b/Project/templates/welcome_user.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="jumbotronn">
+    <p>U bent ingelogd.</p>
+</div>
+{% endblock%}
 
-{% endblock %}
