--- a/FilmFan/myproject/templates/base.html
+++ b/FilmFan/myproject/templates/base.html
@@ -1,27 +1,64 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <meta charset="utf-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+<meta charset="utf-8">
     <title></title>
   </head>
   <body>
-  <ul class="nav">
-
-  <li class="nav-item">
-    <a class="nav-link" href="{{ url_for('home') }}">Home</a>
-  </li>
-    {% if current_user.is_authenticated %}
-    <li class="nav-link"><a href="{{ url_for('logout') }}">Log Out</a></li>
-    {% else %}
-    <li class="nav-link"><a href="{{ url_for('login') }}">Log In</a></li>
-    <li class="nav-link"><a href="{{ url_for('register') }}">Register</a></li>
-    {% endif %}
-
-</ul>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="{{ url_for('index') }}">Home</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Films
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{{ url_for('add_film') }}">Voeg film toe</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('list_films') }}">Filmlijst</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="{{ url_for('del_film') }}">Verwijder een Film</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Regiseurs
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{{ url_for('add_regisseur') }}">Voeg regisseur toe</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('list_regisseurs') }}">Lijst van regisseurs</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="{{ url_for('del_regisseur') }}">Verwijder een regisseur</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Acteurs
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{{ url_for('add_acteur') }}">Voeg acteur toe</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('list_acteurs') }}">Lijst van acteurs</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="{{ url_for('del_acteur') }}">Verwijder een acteur</a></li>
+              </ul>
+            </li> 
+           </ul>
+           {% if current_user.is_authenticated %}
+           <a class="navbar-brand" href="{{ url_for('logout') }}">Logout</a>
+           {% else %}
+           <a class="navbar-brand" href="{{ url_for('login') }}">Login</a>
+           <a class="navbar-brand" href="{{ url_for('register') }}">Register</a>
+           {% endif %}  
+        </div>
+      </div>
+    </nav>
 {% block content %}
 
 {% endblock %}
