--- a/FilmFan/myproject/templates/base.html
+++ b/FilmFan/myproject/templates/base.html
@@ -21,10 +21,14 @@
                 Films
               </a>
               <ul class="dropdown-menu">
+                  {% if current_user.is_authenticated %}
                   <li><a class="dropdown-item" href="{{ url_for('list_films') }}">Filmlijst</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="{{ url_for('add_film') }}">Voeg film toe</a></li>
                   <li><a class="dropdown-item" href="{{ url_for('del_film') }}">Verwijder een Film</a></li>
+                  {% else %}
+                  <li><a class="dropdown-item" href="{{ url_for('list_films') }}">Filmlijst</a></li>
+                  {% endif %}
               </ul>
             </li>
             <li class="nav-item dropdown">
@@ -32,23 +36,32 @@
                 Regiseurs
               </a>
               <ul class="dropdown-menu">
+                  {% if current_user.is_authenticated %}
                   <li><a class="dropdown-item" href="{{ url_for('list_regisseurs') }}">Lijst van regisseurs</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="{{ url_for('add_regisseur') }}">Voeg regisseur toe</a></li>
                   <li><a class="dropdown-item" href="{{ url_for('del_regisseur') }}">Verwijder een regisseur</a></li>
+                  {% else %}
+                  <li><a class="dropdown-item" href="{{ url_for('list_regisseurs') }}">Lijst van regisseurs</a></li>
+                  {% endif %}
               </ul>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Acteurs
-              </a>
-              <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="{{ url_for('list_acteurs') }}">Lijst van acteurs</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="{{ url_for('add_acteur') }}">Voeg acteur toe</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('del_acteur') }}">Verwijder een acteur</a></li>
-              </ul>
-            </li> 
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Acteurs
+                </a>
+                <ul class="dropdown-menu">
+                    {% if current_user.is_authenticated %}
+                    <li><a class="dropdown-item" href="{{ url_for('list_acteurs') }}">Lijst van acteurs</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="{{ url_for('add_acteur') }}">Voeg acteur toe</a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('del_acteur') }}">Verwijder een acteur</a></li>
+                    {% else %}
+                    <li><a class="dropdown-item" href="{{ url_for('list_acteurs') }}">Lijst van acteurs</a></li>
+                    {% endif %}
+                </ul>
+                
+</li> 
            </ul>
            {% if current_user.is_authenticated %}
            <a class="navbar-brand" href="{{ url_for('logout') }}">Logout</a>
