--- a/FilmFan/myproject/templates/base.html
+++ b/FilmFan/myproject/templates/base.html
@@ -64,10 +64,10 @@
 </li> 
            </ul>
            {% if current_user.is_authenticated %}
-           <a class="navbar-brand" href="{{ url_for('logout') }}">Logout</a>
+           <a class="navbar-brand" href="{{ url_for('logout') }}">Log uit</a>
            {% else %}
-           <a class="navbar-brand" href="{{ url_for('login') }}">Login</a>
-           <a class="navbar-brand" href="{{ url_for('register') }}">Register</a>
+           <a class="navbar-brand" href="{{ url_for('login') }}">Log in</a>
+           <a class="navbar-brand" href="{{ url_for('register') }}">registreer</a>
            {% endif %}  
         </div>
       </div>
