--- a/FilmFan/myproject/templates/welcome_user.html
+++ b/FilmFan/myproject/templates/welcome_user.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="jumbotron">
-  <p>U bennt in gelogd!</p>
+  <p>U bent in gelogd!</p>
 </div>
 {% endblock %}
