few typo's and tryout changes

--- a/FilmFan/myproject/templates/home.html
+++ b/FilmFan/myproject/templates/home.html
@@ -4,7 +4,7 @@
   {% if current_user.is_authenticated %}
     <p>Hi {{ current_user.username }}!</p>
   {% else %}
-    <p>Log in of regeristreed alstublieft!</p>
+    <p>Log in of registreer alstublieft!</p>
   {% endif %}
 </div>
 
