tried to get YT links working

--- a/FilmFan/myproject/templates/addfilm.html
+++ b/FilmFan/myproject/templates/addfilm.html
@@ -8,6 +8,7 @@
       {{ form.titel.label }} {{ form.titel() }} <br>
       {{ form.jaartal.label }} {{ form.jaartal() }} <br>
       {{ form.regisseur.label }} {{ form.regisseur() }} <br>
+      {{ form.youtube.label}} {{form.youtube()}} <br>
       {{ form.submit() }}
   </form>
 </div>
